updated image links

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <img src="images/indeed.png" />
           <img src="images/tnw.png" />
           <img src="images/danone.jpg" />
-          <img src="images/IBM.png" />
+          <img src="images/ibm.png" />
         </div>
 
         <div>
@@ -86,7 +86,7 @@
           <img src="images/fedex.png" />
           <img src="images/walmart.png" />
           <img src="images/microsoft.png" />
-          <img src="images/forbes.png" />
+          <img src="images/Forbes.png" />
         </div>
       </div>
     </section>
